k8s/frontend/service.yml
apiVersion: v1
kind: Service

metadata:
  name: ecommerce-frontend-service
  namespace: ecommerce

spec:
  selector:
    app: ecommerce-frontend

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
