k8s/frontend/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: ecommerce-frontend-route
  namespace: ecommerce

spec:
  parentRefs:
    - name: ecommerce-gateway
      namespace: gateway-system

  hostnames:
    - ecommerce.local

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: ecommerce-frontend-service
          port: 80
